# pcap_app

./: .gitignore  Directory.Build.props  build.bat  build.sh  docker-compose.dcproj  pcap_app.sln  win_service.ps1
WareHound.Sniffer/: FlowTable.h  FlowTracker.h  PacketParser.h  ProtocolDetector.h  Sniffer.cpp  Sniffer.h  SnifferExports.cpp  SnifferExports.h  StatisticsExports.cpp  StatisticsExports.h  WareHound.Sniffer.vcxproj  builderDevice.cpp  builderDevice.h  ether_ntoa.h  handleProto.h  ipc.cpp  ipc.h  mainFunc.cpp  packages.h  packages_globals.cpp  struct.h
WareHound.UI/: App.xaml  App.xaml.cs  WareHound.UI.csproj
WareHound.UI/Controls/: MenuItem.xaml  MenuItem.xaml.cs  StatisticsStatusBar.xaml  StatisticsStatusBar.xaml.cs  StatisticsStatusBarViewModel.cs  UserPopup.xaml  UserPopup.xaml.cs
WareHound.UI/Converters/: Converters.cs
WareHound.UI/IPC/: ISnifferInterop.cs  NativeStatisticsInterop.cs  SnifferInterop.cs
WareHound.UI/IPC/Grpc/: GrpcService.cs  IHostedGrpcService.cs
WareHound.UI/IPC/Ptr/: CloseAppPtr.cs  DevicesPtr.cs  PutDevicePtr.cs  StartCapturePtr.cs  StopCapturePtr.cs  StreamPtr.cs
WareHound.UI/Infrastructure/DependencyInjection/: ServiceCollectionExtensions.cs
WareHound.UI/Infrastructure/Events/: AutoScrollChangedEvent.cs  CaptureStateChangedEvent.cs  ClearPacketsEvent.cs  DevicesLoadingEvent.cs  FilterChangedEvent.cs  GrpcEnabledChangedEvent.cs  PacketCapturedEvent.cs  PcapBackendChangedEvent.cs  PcapEvents.cs  ShowMacAddressesChangedEvent.cs  ThemeChangedEvent.cs  TimeFormatChangedEvent.cs
WareHound.UI/Infrastructure/Extensions/: GrpcServiceExtensions.cs
WareHound.UI/Infrastructure/Filters/: PacketFilters.cs
WareHound.UI/Infrastructure/Mapping/: SnapshotMappingProfile.cs
WareHound.UI/Infrastructure/Services/: LoggerService.cs
WareHound.UI/Infrastructure/ViewModels/: BaseViewModel.cs
WareHound.UI/Models/: CaptureStatistics.cs  LogEntry.cs  NetworkDevice.cs  PacketInfo.cs  SnapshotStruct.cs  StatisticsSnapshot.cs  TopTalkerItem.cs  TreeNode.cs
WareHound.UI/Properties/: Resources.Designer.cs  launchSettings.json
WareHound.UI/Protos/: sniffering.proto
WareHound.UI/Services/: CaptureSessionFacade.cs  ICaptureSessionFacade.cs  IPacketCollectionService.cs  IPcapFileService.cs  ISnifferService.cs  NativePcapFileService.cs  PacketCollectionService.cs  PcapFileServiceFactory.cs  SharpPcapFileService.cs  SnifferService.cs  StatisticsChannel.cs
WareHound.UI/Services/BackgroundJobs/: BackgroundJobs.cs  IBackgroundJobs.cs
WareHound.UI/Services/BackgroundJobs/AsyncCollection/: AsyncConcurrencyQueue.cs
WareHound.UI/Themes/: Colors.xaml  Styles.xaml
WareHound.UI/ViewModels/: CaptureViewModel.cs  DashboardViewModel.cs  LogViewModel.cs  MainWindowViewModel.cs  SettingsViewModel.cs  StatisticsViewModel.cs  StatsDisplayModels.cs
WareHound.UI/Views/: CaptureView.xaml  CaptureView.xaml.cs  DashboardView.xaml  DashboardView.xaml.cs  LogView.xaml  LogView.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PacketDetailWindow.xaml  PacketDetailWindow.xaml.cs  SettingsView.xaml  SettingsView.xaml.cs  StatisticsView.xaml  StatisticsView.xaml.cs
WpfApp/: MainWindow.xaml.cs  wpfapp.csproj
WpfApp/IPC/Ptr/: DevicesPtr.cs  GetStreamPtr.cs  PutdevPtr.cs  StopCapturePtr.cs  StopPtr.cs
WpfApp/Properties/: launchSettings.json
WpfApp/Services/Worker/: PutDevice.cs  StartService.cs  Worker.cs
WpfApp/models/: PcapStruct.cs
serviceApp/: CMakeLists.txt  FileLogger.h  Npcap.cpp  Npcap.h  NpcapCommands.cpp  NpcapCommands.h  StreamSession.cpp  StreamSession.h  package_global.cpp  package_global.h  serviceApp.cpp  serviceApp.h  serviceApp.sln  serviceApp.vcxproj  struct.h
sniffer_packages/: CMakeLists.txt  Sniffer.cpp  Sniffer.h  builderDevice.cpp  builderDevice.h  ipc.cpp  ipc.h  mainFunc.cpp  mainFunc.h  packages.h  packages_globals.cpp  pcap_stubs.cpp  sniffer_packages.vcxproj  struct.h
